# speaker-be

./: .env.example  .gitignore  AI_INSTRUCTIONS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.yml  docker-run-claude.sh  go.mod  go.sum  langtools-design-doc.md  langtools.code-workspace  migrations.sql  neo4j.conf  openapi-resolved.json  openapi-resolved.yml  openapi.yml  package.json  pyproject.toml  setup_env.sh  test_env_setup.py  tsconfig.json  typescript-graph.md
.claude/: settings.local.json
.claude/agents/: code-quality-reviewer.md  symbol-analyzer.md  technical-analysis-researcher.md
.cursor/rules/: api-go-architecture.mdc  code-conventions-react-auto.mdc  code-conventions-react.mdc  database-architecture.mdc  flutter-architecture.mdc  go-api-architecture.mdc  json-schema-shared-module.mdc  project-overview.mdc  qtpl-syntax.mdc  tech-execution-assistant.mdc  vue-architecture.mdc
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  setup-python-env.sh
.github/workflows/: lint.yml  test.yml
api-go/: .gitignore  Makefile  go.mod  go.sum  sqlc.bak.json  sqlc.yaml
api-go/Launch_ls -la_2025-02-26_21.55.52_06D22DFB.trace/: form.template
api-go/Launch_run_ollama_test.sh_2025-02-26_22.33.47_AE856F3D.trace/: form.template
api-go/lensmodel/: NewLensModel.go
api-go/scripts/: build-qtc-templates.sh  go-jsonschema.sh
api-go/sql/: user_info.sql
api-go/surrealdbqueries/: GetUserBySessionToken.go
capacitor_app/: README.md  pubspec.yaml
capacitor_app/docs/: PROJECT.md
capacitor_app/lib/: main.dart
capacitor_app/linux/: CMakeLists.txt
capacitor_app/scripts/: generate_models.sh
docs/: fsrs-implementation-design.md
go-jschemamsg/: go.mod
json-schema/: .gitignore  package.json  tsconfig-gen.json  tsconfig.json
langtools-ai/: .gitignore  README.md  langtools-ai-design-doc.md  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml  test_manual.py
langtools-ai/.github/workflows/: ci.yml
langtools-ai/scripts/: build.sh  clean.sh  dev.sh  lint.sh  test.sh
langtools-ai/src/langtools/: __init__.py
langtools-ai/src/langtools/ai/: __init__.py  client.py  debug.py  functions.py  models.py  prompts.py
langtools-ai/tests/: test_client.py  test_functions.py
langtools-app/: .env.example  .eslintrc.js  .gitignore  CONVEX_SETUP.md  DEBUG_AUTH.md  README.md  SELF_HOSTED_SETUP.md  SETUP.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
langtools-main/: .env.claude  .env.example  .gitignore  DATABASE.md  Dockerfile  README.md  deploy-vps.sh  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml  run_api.py  test_manual.py
langtools-main/alembic/: env.py  script.py.mako
langtools-main/alembic/versions/: 2ccd0b0506ea_add_dictionary_entry_and_fsrs_tables.py  38bf090d9172_create_otp_table.py  59b4af7d074c_add_dictionary_entry_tables.py  909454950d14_add_dictionary_entry_tables.py  c313c7167905_add_dictionary_entry_tables.py  d50b9d90b396_create_learner_table.py  d91aedc23fe3_init_profile_auth_with_password_and_otp.py  f30656839bba_add_created_at_and_updated_at_columns_.py
langtools-main/docker/postgres/: init.sql
langtools-main/plans/: api_server_core.md  database-shema-refactoring.md
langtools-main/scripts/: build.sh  clean.sh  db.sh  dev.sh  lint.sh  test.sh
langtools-main/src/langtools/: __init__.py
langtools-main/src/langtools/main/: __init__.py
langtools-main/src/langtools/main/api/: __init__.py  app.py  config.py  database.py
langtools-main/src/langtools/main/api/auth/: __init__.py  dependencies.py  otp.py  utils.py
langtools-main/src/langtools/main/api/models/: __init__.py  auth_password.py  auth_user.py  dictionary.py  dictionary_entry.py  dictionary_entry_translation.py  fsrs.py  learner.py  otp.py  profile.py  r_meaning_translation_fsrs.py  r_user_dictionary_entry.py
langtools-main/src/langtools/main/api/pg_queries/: __init__.py  auth_password.py  auth_user.py  dictionary.py  dictionary_entry.py  learner.py  otp.py  profile.py  types.py  user.py
langtools-main/src/langtools/main/api/routers/: __init__.py  auth.py  dictionary.py
langtools-main/src/langtools/main/api/schemas/: __init__.py  auth.py  dictionary.py
langtools-main/src/langtools/main/api/utils/: __init__.py  id_generation.py
langtools-main/src/langtools/main/fsrs/: __init__.py  formulas.py  functions.py  models.py
langtools-main/tests/api/: conftest.py  test_auth.py  test_dictionary.py  test_dictionary_entry.py
langtools-main/tests/fsrs/: test_functions.py  test_models.py
langtools-mcp/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  pyproject.toml  server-info.json  test_integration.py
langtools-mcp/scripts/: build.sh  clean.sh  dev.sh  docker-build.sh  docker-test.sh  lint.sh  test.sh
langtools-mcp/src/langtools/: __init__.py
langtools-mcp/src/langtools/mcp/: __init__.py  api.py  main.py  query_auth_middleware.py  server.py
langtools-mcp/tests/: __init__.py  test_main.py  test_server.py
langtools-utils/: README.md  pyproject.toml  pyrightconfig.json  ruff.toml
langtools-utils/scripts/: lint.sh
langtools-utils/src/langtools/: __init__.py
langtools-utils/src/langtools/utils/: __init__.py
loki/: docker-compose.yml
migrations/: 20240403145328_init.sql  20240403145741_update_fields.go  20240411173916_create_user.sql  20240411174119_add_history.sql  20240411174937_make_user_id_not_null.sql  20240411175730_history_ai.sql  20240411183220_fix_column_names.sql  20240411190320_fix_history_table_names.sql
plans/: add_dictionary_entry_endpoint.md  add_fsrs_ednpoints.md  generate_dictionary_entry_endpoint.md  make_dictionary_entry_generate_database.md
scripts/: generate-json-schema.sh  watch-json-schema.sh
src/: ai.ts  db.ts  index.ts  message.ts  openapi.ts
termchain-mcp/: .gitignore  go.mod  go.sum  test_stdio.sh
vocabo-android/: README.md
vocabo-mobile/: README.md  app.json  package.json
vue/: .eslintrc.cjs  README.md  globals.d.ts  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts
(+970 files in other folders)
