[project]
name = "langtools-mcp"
version = "0.1.0"
description = "MCP server for language learning tools"
dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "langtools-ai",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "basedpyright>=1.12.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.31.0",  # Type stubs for requests
]

[project.scripts]
langtools-mcp = "langtools.mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langtools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
langtools-ai = { workspace = true }


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"